--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.alibaba:fastjson:1.1.56.android'
     testCompile 'junit:junit:4.12'
 }
