--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.alibaba:fastjson:1.1.56.android'
+    compile 'com.alibaba:fastjson:1.2.10'
     testCompile 'junit:junit:4.12'
 }
