--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:process=":remote" />
 
         <activity
-            android:name=".Activity.LoginActivity"
+            android:name=".Activity.IndexActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,6 +50,9 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".Activity.RegisterActivity"
