--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="KyGDuP3ZttntKYQsYi1k4D5s2N8U783P" />
-            <!-- android:value="6W4wrtNm8IiBKFG2G194BwDZqSWuDC2Z" -->
+            android:value="6W4wrtNm8IiBKFG2G194BwDZqSWuDC2Z" />
+            <!-- android:value="KyGDuP3ZttntKYQsYi1k4D5s2N8U783P" -->
 
 
         <service
@@ -53,6 +53,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Activity.SugActivity"
+            android:label="@string/title_activity_login"/>
+        <activity
             android:name=".Activity.MainActivity"
             android:label="@string/title_activity_login" />
         <activity
@@ -64,6 +67,7 @@
         <activity
             android:name=".Activity.DynamicActivity"
             android:label="@string/title_activity_login"/>
+
     </application>
 
 </manifest>
