--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
+
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="6W4wrtNm8IiBKFG2G194BwDZqSWuDC2Z" />
-            <!-- android:value="KyGDuP3ZttntKYQsYi1k4D5s2N8U783P" -->
+            android:value="KyGDuP3ZttntKYQsYi1k4D5s2N8U783P" />
+            <!-- android:value="6W4wrtNm8IiBKFG2G194BwDZqSWuDC2Z" -->
 
 
         <service
@@ -57,7 +59,7 @@
             android:label="@string/title_activity_login"/>
         <activity
             android:name=".Activity.MainActivity"
-            android:label="@string/title_activity_login" />
+            android:label="@string/title_activity_login"/>
         <activity
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login" />
